gio/ginetsocketaddress.h
@@ -55,14 +55,16 @@ struct _GInetSocketAddressClass
   GSocketAddressClass parent_class;
 };
 
-GType           g_inet_socket_address_get_type    (void) G_GNUC_CONST;
+GType           g_inet_socket_address_get_type     (void) G_GNUC_CONST;
 
-GSocketAddress *g_inet_socket_address_new         (GInetAddress       *address,
-						   guint16             port);
+GSocketAddress *g_inet_socket_address_new          (GInetAddress       *address,
+						    guint16             port);
 
-GInetAddress *  g_inet_socket_address_get_address (GInetSocketAddress *address);
+GInetAddress *  g_inet_socket_address_get_address  (GInetSocketAddress *address);
+guint16         g_inet_socket_address_get_port     (GInetSocketAddress *address);
 
-guint16         g_inet_socket_address_get_port    (GInetSocketAddress *address);
+guint32         g_inet_socket_address_get_flowinfo (GInetSocketAddress *address);
+guint32         g_inet_socket_address_get_scope_id (GInetSocketAddress *address);
 
 G_END_DECLS
 
